# python-lab-3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
practice/: 20_valid_parentheses.py  215_kth_largest_element_in_array.py  225_implement_stack_using_queues.py  347_top_k_frequent_elements.py  75_sort_colors.py  counting_sort_1.py  counting_sort_2.py  counting_sort_3.py  quick_sort_1.py
src/: app.py  benchmarks.py  errors.py  factorial.py  fibo.py  fibonacci.py  generators.py  heap.py  main.py  sort.py  stack.py  validation.py
tests/: test_factorial.py  test_fibo.py  test_sort.py
