[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0"
]


[tool.coverage.report]
fail_under = 90.0
precision = 2


[tool.ruff.lint]
ignore = ["E731"]


[tool.mypy]
disable_error_code = [
    "empty-body",
    "func-returns-value",
]
